Nahodne udalosti a akcie hrača.

--- a/Simulator_I.AI/Simulator_I.AI.csproj
+++ b/Simulator_I.AI/Simulator_I.AI.csproj
@@ -7,4 +7,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="Book%28Sheet1%29.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
